[project]
name = "backend"
version = "0.1.0"
description = "Backend for thbattle"
readme = "README.md"
license = {text = "GPL-3.0+"}
authors = [
    {name = "Proton", email = "feisuzhu@163.com"},
]
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.2",
    "requests>=2.31.0",
    "raven>=6.10.0",
    "gunicorn>=21.2.0",
    "django>=5.0.3",
    "graphene>=3.3",
    "django-annoying>=0.10.6",
    "graphene-django>=3.2.0",
    "django-redis-sessions>=0.6.2",
    "itsdangerous>=2.1.2",
    "msgpack>=1.1.0",
    "pymysql>=1.1.0",
    "pyyaml>=6.0.1",
    "django-schema-graph>=3.1.0",
    "trueskill>=0.4.5",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.2.0",
    "sentry-sdk>=1.40.6",
    "pytz>=2024.1",
    "psycopg[binary]>=3.2.3",
    "greenlet>=3.1.1",
]

[dependency-groups]
dev = [
    # "neovim>=0.3.1",
    # "flake8>=7.0.0",
    "werkzeug>=3.0.1",
    "pprintpp>=0.4.0",
    # "ipython>=8.22.2",
    "django-debug-permissions>=1.0.0",
    "pytest-django>=4.8.0",
    "factory-boy>=3.3.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pdm]
distribution = false
