[project]
name = "backend"
version = "0.1.0"
description = "Backend for thbattle"
readme = "README.md"
license = {text = "GPL-3.0+"}
authors = [
    {name = "Proton", email = "feisuzhu@163.com"},
]
requires-python = ">=3.12"
dependencies = [
    "redis>=7.2.0",
    "requests>=2.32.5",
    "gunicorn>=25.1.0",
    "django>=6.0.2",
    "graphene>=3.4.3",
    "django-annoying>=0.10.8",
    "graphene-django>=3.2.3",
    "django-redis-sessions>=0.6.2",
    "itsdangerous>=2.2.0",
    "msgpack>=1.1.2",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "django-schema-graph>=3.1.0",
    "trueskill>=0.4.5",
    "qrcode[pil]>=8.2",
    "Pillow>=12.1.1",
    "sentry-sdk>=2.53.0",
    "pytz>=2025.2",
    "psycopg[binary]>=3.3.2",
    "greenlet>=3.3.1",
]

[dependency-groups]
dev = [
    # "neovim>=0.3.1",
    # "flake8>=7.0.0",
    "werkzeug>=3.1.5",
    "pprintpp>=0.4.0",
    # "ipython>=8.22.2",
    "django-debug-permissions>=1.0.0",
    "pytest-django>=4.12.0",
    "factory-boy>=3.3.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.pdm]
distribution = false
