[package]
name = "aya"
version = "0.1.0"
authors = ["Proton <feisuzhu@163.com>"]
edition = "2021"

[dependencies]
actix = "0.13.0"
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.19"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
rmp-serde = "1.1.0"
actix-web = "4.0.1"
chashmap = "2.2.2"
lazy_static = "1.4.0"
argparse = "0.2.2"
actix-web-actors = "4.1.0"
actix-rt = "2.7.0"
once_cell = "1.12.0"
anyhow = "1.0.57"
ureq = "2.4.0"
serde_bytes = "0.11.6"
