[package]
name = "aya"
version = "0.1.0"
authors = ["Proton <feisuzhu@163.com>"]
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
anyhow = "1.0.95"
argparse = "0.2.2"
chashmap = "2.2.2"
chrono = "0.4.39"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.20.2"
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_derive = "1.0.217"
serde_json = "1.0.135"
ureq = "2.12.1"

[[bin]]
name = "chat"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
