[package]
name = "aya"
version = "0.1.0"
authors = ["Proton <feisuzhu@163.com>"]
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.11.0"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
anyhow = "1.0.101"
argparse = "0.2.2"
chrono = "0.4.43"
dashmap = "6.1.0"
env_logger = "0.11.9"
log = "0.4.29"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
ureq = "3.2.0"

[[bin]]
name = "chat"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
