[package]
name = "smsagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
serial = "0.4.0"
env_logger = "0.9.0"
log = "0.4.17"
smste = { path = "libs/smste" }
serde_json = "1.0.81"
ureq = "2.4.0"
serde_derive = "1.0.137"
serde = "1.0.137"
once_cell = "1.12.0"
