[package]
name = "smsagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
serial = "0.4.0"
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.81"
ureq = "2.4.0"
serde_derive = "1.0.137"
serde = "1.0.137"
once_cell = "1.12.0"

# below are for smste
nom = "7.1.1"
bitflags = "1.3.2"
chrono = "0.4.19"
num-derive = "0.3.3"
num-traits = "0.2.15"

[[bin]]
name = "chat"
path = "src/main.rs"
