[project]
name = "thbattle"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Proton", email = "feisuzhu@163.com"},
]
dependencies = [
    "gevent>=24.2.1",
    "requests>=2.31.0",
    "raven>=6.10.0",
    "websocket-client>=1.7.0",
    "msgpack>=1.0.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0+"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "ipython>=8.22.2",
    "neovim>=0.3.1",
    "flake8>=7.0.0",
    "coverage>=7.4.3",
    "mypy>=1.8.0",
    "itsdangerous>=2.1.2",
]
