[package]
name = "smsagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
serial = "0.4.0"
ureq = "2.12.1"

# below are for smste
nom = "7.1.3"
bitflags = "2.6.0"
chrono = "0.4.39"
num-derive = "0.4.2"
num-traits = "0.2.19"

[[bin]]
name = "smsagent"
path = "src/main.rs"
